<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_github">GitHub</string>
    <string name="about_googleplay">Google Play</string>
    <string name="about_twitter">Twitter</string>
    <string name="about_website">Website</string>
    <string name="access_capacitive_desc">FNG uses this service to block events from physical navigation buttons on supported devices. \10\10FNG uses the minimum required accessibility settings and no personal data is collected.</string>
    <string name="access_capacitive_sum">Helper service by FNG</string>
    <string name="access_capacitive_title">Block capacitive keys by FNG</string>
    <string name="access_main_desc">FNG uses Android Accessibility to perform navigation actions including, but not limited to, Home, Back, Recent apps. \10\10FNG uses the minimum required accessibility settings and no personal data is collected.</string>
    <string name="action_app">App</string>
    <string name="action_app_dock">App folder</string>
    <string name="action_assistant">Assistant</string>
    <string name="action_back">Back</string>
    <string name="action_flashligh_toggle">Toggle flashlight</string>
    <string name="action_google_overlay">Google search</string>
    <string name="action_home">Home</string>
    <string name="action_keyboard_selector">Keyboard selector</string>
    <string name="action_keycode">Key code</string>
    <string name="action_kill_app">Kill app</string>
    <string name="action_kill_app_failed">App not killed</string>
    <string name="action_menu">Menu</string>
    <string name="action_next_app">Next app</string>
    <string name="action_none">None</string>
    <string name="action_not_supported">Action not supported on this device</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_one_hand_mode">One Handed Mode</string>
    <string name="action_one_hand_mode_sum">Requires EMUI or MIUI</string>
    <string name="action_power_dialog">Power off dialog</string>
    <string name="action_previous_app">Previous app</string>
    <string name="action_previous_app_native">Previous app (Double tap recents)</string>
    <string name="action_quick_set">Quick settings</string>
    <string name="action_recents">Recent apps</string>
    <string name="action_root">Requires Root</string>
    <string name="action_root_android_pie">Requires Root or Android Pie (9.0+)</string>
    <string name="action_rotation_app">Enable screen rotation on current app</string>
    <string name="action_rotation_app_sum">Enable Android auto-rotation until you leave the current app</string>
    <string name="action_rotation_lock">Auto-rotate toggle</string>
    <string name="action_rotation_pie">Force rotation</string>
    <string name="action_rotation_pie_sum">Force screen to rotate. Similar to Android Pie</string>
    <string name="action_screen_off">Turn off and lock screen</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_shortcut">Shortcut</string>
    <string name="action_split_screen">Toggle split-screen</string>
    <string name="action_toggle_navbar">Show/hide navigation bar</string>
    <string name="action_voice_assistant">Voice assistant</string>
    <string name="action_voice_search">Voice search</string>
    <string name="action_volume_dialog">Open volume dialog</string>
    <string name="adb_cmd_grant">adb shell pm grant com.fb.fluid android.permission.WRITE_SECURE_SETTINGS</string>
    <string name="adb_cmd_grant_mac">./adb shell pm grant com.fb.fluid android.permission.WRITE_SECURE_SETTINGS</string>
    <string name="anim_bubble">Bubble</string>
    <string name="anim_fluid">Fluid</string>
    <string name="anim_none">None</string>
    <string name="anim_plain_icon">Basic Icon</string>
    <string name="anim_teardrop">Teardrop</string>
    <string name="app_name">Fluid Navigation Gestures</string>
    <string name="app_name_s">FNG</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="billing_cancelled">Purchase cancelled</string>
    <string name="billing_dialog_message">Unlock FNG Pro to get more actions. All the animations. Support future updates of the app.</string>
    <string name="billing_dialog_purchase">%1$s — Forever</string>
    <string name="billing_dialog_restore">Restore purchase</string>
    <string name="billing_dialog_title">Fluid Navigation Gestures Pro</string>
    <string name="billing_dialog_vid_ad">Watch video — 1 day</string>
    <string name="billing_error">Error occurred during purchase %1$d</string>
    <string name="billing_pending">Purchase is pending! Follow the given instructions to complete the purchase</string>
    <string name="billing_pro">Unlock PRO</string>
    <string name="billing_pro_required">This option is for FNG Pro Users</string>
    <string name="billing_unlocked">FNG Pro unlocked!</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="contact_email">Email</string>
    <string name="contact_email_title">Send email</string>
    <string name="contact_email_title_subject">Feedback</string>
    <string name="contact_telegram">Telegram Group</string>
    <string name="dialog_about_label">Developed and designed by Francisco Barroso</string>
    <string name="done">Done</string>
    <string name="error_code">Error Code</string>
    <string name="error_code_description">If there\'s an error, contains an error code</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_message">Error Message</string>
    <string name="error_message_description">If there\'s an error, contains an error message</string>
    <string name="error_touch_trigger">Error occurred with FNG trigger</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="header_about">About</string>
    <string name="header_action">Action #%1$d</string>
    <string name="header_additional_settings">Additional settings</string>
    <string name="header_advanced">Advanced</string>
    <string name="header_animation">Animation</string>
    <string name="header_app_rules">Rules per app</string>
    <string name="header_app_rules_sum">Automatically pause/resume FNG background service</string>
    <string name="header_app_theme">Choose theme</string>
    <string name="header_backup">Backup</string>
    <string name="header_contact">Contact support</string>
    <string name="header_export">Export preferences</string>
    <string name="header_help">Help</string>
    <string name="header_how_to">How to use FNG?</string>
    <string name="header_import">Import preferences</string>
    <string name="header_intro">Intro</string>
    <string name="header_licences">Licenses</string>
    <string name="header_navbar">Hide navigation bar</string>
    <string name="header_navbar_sum">Disable FNG before force stopping, clear data or uninstalling to allow the app to restore the navigation bar</string>
    <string name="header_pause_recommended">FNG may cause block some system menus due to the use of overlays. Use these options to automatically pause/resume FNG and prevent this problem</string>
    <string name="header_permissions">Permissions</string>
    <string name="header_permissions_required">The following permissions must be granted to use the app</string>
    <string name="header_personalization">Look &amp; feel</string>
    <string name="header_privacy">Privacy Policy</string>
    <string name="header_scale">Size</string>
    <string name="header_sound_vibration">Sound &amp; vibration</string>
    <string name="header_theme">Theme</string>
    <string name="header_trigger">Trigger</string>
    <string name="header_triggers">Triggers</string>
    <string name="header_triggers_gestures">Additional gestures</string>
    <string name="help_actions_fail_oneplus">Home or Back actions are not working (OnePlus)</string>
    <string name="help_actions_fail_oneplus_sum">Disable the Navigation gestures option in the OnePlus settings</string>
    <string name="help_app_not_working">FNG is not working</string>
    <string name="help_app_optimization_desc">Open battery settings</string>
    <string name="help_app_optimization_sum">Disable battery optimization for this app in the settings.</string>
    <string name="help_autostart_desc">Launch app settings</string>
    <string name="help_autostart_sum">Auto start is required to allow the app to run in the background on some devices</string>
    <string name="help_dontkillmyapp">Visit dontkillmyapp.com for more information</string>
    <string name="help_dontkillmyapp_desc">Launch dontkillmyapp.com</string>
    <string name="help_service_sdcard">Installing the app on an SD card (external storage) may turn off accessibility when the device boots. Try moving it back to main storage.</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="howto_lineage">Using ADB and fastboot</string>
    <string name="howto_lineage_src">LineageOS Wiki</string>
    <string name="howto_lineage_url">https://wiki.lineageos.org/adb_fastboot_guide.html</string>
    <string name="howto_xda">How to Install ADB on Windows...</string>
    <string name="howto_xda_src">XDA Developers</string>
</resources>