<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/layout_dialog_about_0" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/item_settings_padding_half" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/item_settings_padding_half" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:src="@mipmap/ic_launcher_round_settings"/>
            <androidx.appcompat.widget.AppCompatTextView android:textAppearance="@style/AppTheme.TextAppearance.Title" android:gravity="center" android:id="@+id/toolbar_title" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:layout_marginTop="8dp" android:text="@string/app_name" app:fontFamily="sans-serif"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/font_normal" android:textColor="?android:attr/textColorSecondary" android:id="@+id/txt_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/dialog_about_label" android:fontFamily="sans-serif"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/font_medium" android:textColor="?android:attr/textColorTertiary" android:ellipsize="end" android:id="@+id/txt_app_version" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:maxLines="15" android:minLines="1"/>
        </LinearLayout>
        <com.google.android.flexbox.FlexboxLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/item_settings_padding_half" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/item_settings_padding_half" android:layout_width="match_parent" android:layout_height="wrap_content" app:dividerDrawable="@drawable/divider_empty" app:flexDirection="0" app:flexWrap="1" app:justifyContent="0" app:showDivider="2">
            <com.google.android.material.button.MaterialButton android:textSize="@dimen/font_medium" android:textColor="?android:attr/textColorTertiary" android:tag="binding_2" android:focusable="false" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_twitter" android:textAllCaps="false" app:strokeWidth="2dp" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            <com.google.android.material.button.MaterialButton android:textSize="@dimen/font_medium" android:textColor="?android:attr/textColorTertiary" android:tag="binding_3" android:focusable="false" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_website" android:textAllCaps="false" app:strokeWidth="2dp" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            <com.google.android.material.button.MaterialButton android:textSize="@dimen/font_medium" android:textColor="?android:attr/textColorTertiary" android:tag="binding_4" android:focusable="false" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_github" android:textAllCaps="false" app:strokeWidth="2dp" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            <com.google.android.material.button.MaterialButton android:textSize="@dimen/font_medium" android:textColor="?android:attr/textColorTertiary" android:tag="binding_5" android:focusable="false" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_googleplay" android:textAllCaps="false" app:strokeWidth="2dp" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        </com.google.android.flexbox.FlexboxLayout>
        <View android:background="?attr/colorBackgroundLight" android:layout_width="match_parent" android:layout_height="0.5dp" android:layout_marginTop="8dp" android:layout_marginBottom="0dp"/>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton android:textSize="@dimen/font_small" android:textColor="?android:attr/textColorSecondary" android:id="@+id/but_licenses" android:tag="binding_6" android:focusable="false" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/header_licences" android:textAllCaps="false" app:strokeColor="#00000000" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/font_medium" android:textColor="?android:attr/textColorSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="•"/>
            <com.google.android.material.button.MaterialButton android:textSize="@dimen/font_small" android:textColor="?android:attr/textColorSecondary" android:id="@+id/but_privacy" android:tag="binding_7" android:focusable="false" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/header_privacy" android:textAllCaps="false" app:strokeColor="#00000000" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
