<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/layout_dialog_billing_0" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/item_settings_padding_half" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/item_settings_padding" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:src="@mipmap/ic_launcher_round_settings"/>
            <androidx.appcompat.widget.AppCompatTextView android:textAppearance="@style/AppTheme.TextAppearance.Title" android:gravity="center" android:id="@+id/toolbar_title" android:paddingLeft="8dp" android:paddingRight="8dp" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:layout_marginTop="8dp" android:text="@string/billing_dialog_title" app:fontFamily="sans-serif"/>
            <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/font_normal" android:textColor="?android:attr/textColorSecondary" android:gravity="center_horizontal" android:id="@+id/txt_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/billing_dialog_message" android:fontFamily="sans-serif"/>
        </LinearLayout>
        <View android:background="?attr/colorBackgroundLight" android:layout_width="match_parent" android:layout_height="0.5dp"/>
        <com.google.android.material.button.MaterialButton android:textSize="@dimen/font_medium" android:textColor="?android:attr/textColorTertiary" android:tag="binding_1" android:focusable="false" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:textAllCaps="false" app:strokeWidth="0dp" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        <View android:tag="binding_2" android:background="?attr/colorBackgroundLight" android:layout_width="match_parent" android:layout_height="0.5dp"/>
        <com.google.android.material.button.MaterialButton android:textSize="@dimen/font_medium" android:textColor="?android:attr/textColorTertiary" android:tag="binding_3" android:focusable="false" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/billing_dialog_vid_ad" android:textAllCaps="false" app:strokeWidth="0dp" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        <View android:background="?attr/colorBackgroundLight" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.5dp"/>
        <com.google.android.material.button.MaterialButton android:textSize="@dimen/font_medium" android:textColor="?android:attr/textColorTertiary" android:tag="binding_4" android:focusable="false" android:focusableInTouchMode="true" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/billing_dialog_restore" android:textAllCaps="false" app:strokeWidth="0dp" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
